# AyCmakeTemplate-Tests

./: CMakeLists.txt  README.md  README_CN.md
cmake/: Utils.cmake
tests/: CMakeLists.txt
tests/aytest/: CMakeLists.txt
tests/aytest/include/aytest/: aytest.hpp  exception.hpp  singleton.hpp  testcase.hpp
tests/aytest/include/aytest/detail/: constant.hpp  exception.hpp  expr_eval.hpp  expr_info.hpp  file_info.hpp  singleton.hpp
tests/testlib/: CMakeLists.txt
tests/testlib/include/: testlib.h
tests/testlib/include/testlib/: singleton.hpp
tests/testlib/src/: testlib.cc
tests/ut/: CMakeLists.txt
tests/ut/utest1/: main.main.cc
tests/ut/utest1/case1/: test1.test.cc
tests/ut/utest1/module1/: test2.test.cc
tests/ut/utest1/module2/: test1.test.cc
tests/ut/utest2/module1/: test1.test.cc
tests/ut/utest2/utest2/: utils.h
